--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "npm install && tsc",
-    "start": "node dist/src/server.js",
+    "start": "node dist/server.js",
     "dev": "nodemon src/server.ts"
   },
   "author": "Alex Omiunu",
